<resources>
    <string name="app_name">Palleria</string>
    <string name="palleria_account_label">Palleria</string>
    <string name="app_name_dummy">電卓</string>
    <string name="process_text_search">Palleriaで検索</string>
    <string name="shortcut_search">検索</string>
    <string name="shortcut_search_long">Palleriaで検索</string>
    <string name="shortcut_ranking">ランキング</string>
    <string name="shortcut_ranking_long">ランキングを開く</string>
    <string name="shortcut_bookmarks">ブックマーク</string>
    <string name="shortcut_bookmarks_long">ブックマークを開く</string>
    <string name="shortcut_history">閲覧履歴</string>
    <string name="shortcut_history_long">閲覧履歴を開く</string>
    <string name="nav_home">ホーム</string>
    <string name="home_new_items_available">新着作品 %1$d 件を表示</string>
    <string name="nav_novel">小説</string>
    <string name="nav_ranking">ランキング</string>
    <string name="nav_bookmarks">ブクマ</string>
    <string name="nav_bookmarks_full">ブックマーク</string>
    <string name="nav_search">検索</string>
    <string name="nav_shorts_feed">フィード</string>
    <string name="general_shorts_feed">縦型フィード</string>
    <string name="general_shorts_feed_desc">ホームとフォロー中のイラストを、縦スワイプで全画面表示します</string>
    <string name="general_shorts_feed_disable_horizontal_swipe">フィード内の左右スワイプを無効化</string>
    <string name="general_shorts_feed_disable_horizontal_swipe_desc">フィード表示中に左右スワイプでタブが切り替わらないようにします</string>
    <string name="nav_more">もっと見る</string>
    <string name="action_save">保存</string>
    <string name="action_open">開く</string>
    <string name="action_cancel">キャンセル</string>
    <string name="action_delete">削除</string>
    <string name="action_close">閉じる</string>
    <string name="action_follow">フォロー</string>
    <string name="action_following">フォロー中</string>
    <string name="action_unfollow">フォロー解除</string>
    <string name="action_bookmark">ブックマークに追加</string>
    <string name="action_remove_bookmark">ブックマーク解除</string>
    <string name="action_share">共有</string>
    <string name="action_download">ダウンロード</string>
    <string name="action_load_more">さらに読み込む</string>
    <string name="action_reload">再読み込み</string>
    <string name="action_view_all">すべて見る</string>
    <string name="action_show">表示する</string>
    <string name="action_add">追加</string>
    <string name="action_enable">有効にする</string>
    <string name="action_reset">リセット</string>
    <string name="active">アクティブ</string>
    <string name="home_tab_feed">フィード</string>
    <string name="home_tab_following">フォロー中</string>
    <string name="home_feed_loading">ホームフィードを読み込んでいます</string>
    <string name="home_following_empty">フォロー中ユーザーの最新作が表示されます</string>
    <string name="novel_header_summary">おすすめの小説をひとつずつ選べる、文字中心の閲覧ページです。</string>
    <string name="novel_header_count">%1$d件</string>
    <string name="novel_header_search_hint">検索で探す</string>
    <string name="novel_empty">小説が見つかりません</string>
    <string name="novel_length_label">本文 %1$d 文字</string>
    <string name="novel_page_count">%1$dページ</string>
    <string name="novel_bookmark_count">%1$d ブクマ</string>
    <string name="novel_view_count">%1$d PV</string>
    <string name="novel_reader_title">本文</string>
    <string name="novel_reader_loading">本文を読み込んでいます…</string>
    <string name="novel_series_prev">前の話: %1$s</string>
    <string name="novel_series_next">次の話: %1$s</string>
    <string name="novel_filter_all">すべて</string>
    <string name="novel_filter_reading">読書中</string>
    <string name="novel_filter_later">積読</string>
    <string name="novel_filter_completed">読了</string>
    <string name="novel_resume_reading">続きから (%1$d/%2$d)</string>
    <string name="novel_status_reading">読書中</string>
    <string name="novel_status_later">積読</string>
    <string name="novel_status_completed">読了</string>
    <string name="novel_status_unread">未読</string>
    <string name="novel_series_section">シリーズ作品</string>
    <string name="novel_series_prev_episode">前の話へ</string>
    <string name="novel_series_next_episode">次の話へ</string>
    <string name="feed_recommended">おすすめ</string>
    <string name="feed_ranking">ランキング</string>
    <string name="feed_new">新着</string>
    <string name="restrict_public">公開</string>
    <string name="restrict_private">非公開</string>
    <string name="sort_date_desc">新着順</string>
    <string name="sort_date_asc">古い順</string>
    <string name="sort_popular_desc">人気順</string>
    <string name="sort_name_asc">名前順</string>
    <string name="search_target_tags">タグ</string>
    <string name="search_target_exact">完全一致</string>
    <string name="search_target_title">本文</string>
    <string name="duration_all">全期間</string>
    <string name="duration_24h">24時間</string>
    <string name="duration_1week">1週間</string>
    <string name="duration_1month">1か月</string>
    <string name="bookmark_filter_none">指定なし</string>
    <string name="bookmark_filter_100">100+</string>
    <string name="bookmark_filter_500">500+</string>
    <string name="bookmark_filter_1000">1000+</string>
    <string name="bookmark_filter_5000">5000+</string>
    <string name="search_tab_illust">イラスト</string>
    <string name="search_tab_novel">小説</string>
    <string name="search_tab_user">ユーザー</string>
    <string name="search_users">ユーザー検索</string>
    <string name="search_options">検索オプション</string>
    <string name="search_sort_order">並び順</string>
    <string name="search_target">検索対象</string>
    <string name="search_work_type">作品の種類</string>
    <string name="search_work_type_artworks">イラスト／マンガ／うごくイラスト</string>
    <string name="search_work_type_illustrations_and_ugoira">イラスト／うごくイラスト</string>
    <string name="search_work_type_illustrations">イラスト</string>
    <string name="search_work_type_ugoira">うごくイラスト</string>
    <string name="search_work_type_manga">マンガ</string>
    <string name="search_work_type_novels">小説</string>
    <string name="search_duration">期間</string>
    <string name="search_bookmark_count">ブックマーク数</string>
    <string name="search_placeholder">作品名またはユーザ名で検索</string>
    <string name="search_history">検索履歴</string>
    <string name="search_suggest">サジェスト</string>
    <string name="search_empty_illust">イラストが見つかりません</string>
    <string name="search_empty_novel">小説が見つかりません</string>
    <string name="search_empty_user">ユーザーが見つかりません</string>
    <string name="search_recent_viewed">最近見た作品</string>
    <string name="search_recommended_tags">おすすめのタグ</string>
    <string name="search_reset_filters">検索条件をリセット</string>
    <string name="search_delete_history_item">履歴を削除</string>
    <string name="action_retry">再試行</string>
    <string name="viewer_page_jump">ページを指定</string>
    <string name="bookmark_tab_timeline">タイムライン</string>
    <string name="bookmark_tab_bookmarks">ブックマーク</string>
    <string name="bookmark_tab_watchlist">Watchlist</string>
    <string name="bookmark_tab_following">フォロー中</string>
    <string name="bookmark_view_all">すべて</string>
    <string name="bookmark_view_artist">作者別</string>
    <string name="bookmark_tag_unclassified">未分類</string>
    <string name="bookmark_tag_watch_later">あとで見る</string>
    <string name="bookmark_empty">ブックマークはまだありません</string>
    <string name="bookmark_following_empty">フォロー中ユーザーの作品はまだありません</string>
    <string name="watchlist_empty">検索結果の保存ボタンからタグを追加できます</string>
    <string name="watchlist_series_title">Watchlist</string>
    <string name="watchlist_series_empty">Watchlist に保存したシリーズはまだありません</string>
    <string name="watchlist_series_load_more">さらにシリーズを読み込む</string>
    <string name="following_users_empty">フォロー中のユーザーはいません</string>
    <string name="favorite_tags_title">お気に入りタグ</string>
    <string name="favorite_tags_empty">検索画面で ☆ ボタンを押してタグを追加できます</string>
    <string name="favorite_tags_no_selection">タグ未選択</string>
    <string name="favorite_tags_delete_title">タグを削除</string>
    <string name="favorite_tags_delete_confirm">「#%1$s」をお気に入りから削除しますか？</string>
    <string name="favorite_tags_works_not_found">「#%1$s」の作品が見つかりません</string>
    <string name="detail_save_image_title">画像を保存</string>
    <string name="detail_save_image_confirm">この画像をPalleriaフォルダへ保存します。</string>
    <string name="detail_save_ugoira_title">うごイラを保存</string>
    <string name="detail_save_ugoira_confirm">このうごイラをGIFとしてPalleriaフォルダへ保存します。</string>
    <string name="detail_unfollow_title">フォローを解除</string>
    <string name="detail_unfollow_confirm">%1$s さんのフォローを解除しますか？</string>
    <string name="detail_open_in_browser">ブラウザで開く</string>
    <string name="detail_share">シェア</string>
    <string name="detail_save_image">画像を保存</string>
    <string name="detail_save_this_page">このページを保存</string>
    <string name="detail_save_ugoira">うごイラを保存</string>
    <string name="detail_save_all_pages">全ページを保存</string>
    <string name="detail_copy_url">URLをコピー</string>
    <string name="detail_mute">ミュート</string>
    <string name="detail_mute_work">この作品をミュート</string>
    <string name="detail_mute_artist">作者をミュート</string>
    <string name="detail_more">その他</string>
    <string name="detail_muted_artist">ミュート中の作者です</string>
    <string name="detail_muted_artist_blur">%1$s さんの作品をぼかしています。</string>
    <string name="detail_muted_artist_blur_default">この作者</string>
    <string name="detail_muted_work">ミュート中の作品です</string>
    <string name="detail_muted_work_blur">ミュート中のタグを含む作品をぼかしています。</string>
    <string name="detail_unmute">ミュート解除</string>
    <string name="detail_no_caption">キャプションはありません</string>
    <string name="detail_comments">コメント</string>
    <string name="detail_show_comments">コメントを表示</string>
    <string name="detail_comments_empty">まだコメントはありません</string>
    <string name="detail_series">シリーズ</string>
    <string name="detail_related">関連イラスト</string>
    <string name="detail_illust_id">イラスト ID</string>
    <string name="detail_resolution">解像度</string>
    <string name="viewer_share_failed">共有を開始できませんでした。</string>
    <string name="more_settings">設定</string>
    <string name="more_view_history">閲覧履歴</string>
    <string name="more_favorite_tags">お気に入りタグ</string>
    <string name="more_mute_settings">ミュート設定</string>
    <string name="more_save_progress">保存処理</string>
    <string name="more_save_progress_saving">保存中 %1$d件</string>
    <string name="more_save_progress_idle">待機中</string>
    <string name="more_download_list">ダウンロード一覧</string>
    <string name="more_download_list_summary">保存中と完了の画像を確認</string>
    <string name="more_watchlist_series">Watchlist</string>
    <string name="more_watchlist_series_summary">保存した漫画シリーズを確認</string>
    <string name="download_queue_title">ダウンロード一覧</string>
    <string name="download_queue_tab_all">すべて</string>
    <string name="download_queue_tab_downloading">ダウンロード中</string>
    <string name="download_queue_tab_completed">完了</string>
    <string name="download_queue_waiting">待機中</string>
    <string name="download_queue_downloading">ダウンロード中</string>
    <string name="download_queue_completed">ダウンロード完了</string>
    <string name="download_queue_skipped">スキップ</string>
    <string name="download_queue_failed">ダウンロード失敗</string>
    <string name="download_queue_section_downloading">ダウンロード中</string>
    <string name="download_queue_section_completed">ダウンロード完了</string>
    <string name="download_queue_section_failed">失敗</string>
    <string name="download_queue_empty">現在ダウンロード中の画像はありません。</string>
    <string name="download_queue_clear">履歴を消去</string>
    <string name="download_queue_clear_title">完了した履歴を消去しますか？</string>
    <string name="download_queue_clear_summary">完了または失敗した項目を一覧から削除します。進行中のダウンロードには影響しません。</string>
    <string name="download_queue_empty_all">ダウンロード履歴はまだありません</string>
    <string name="download_queue_empty_completed">完了したダウンロードはありません</string>
    <string name="download_queue_empty_failed">失敗したダウンロードはありません</string>
    <string name="widget_ranking_title">ランキング</string>
    <string name="widget_ranking_login_title">ログインしてランキングを見る</string>
    <string name="widget_ranking_login_subtitle">Pixiv にログインすると、最新のランキングを表示します。</string>
    <string name="widget_ranking_login_button">ログイン</string>
    <string name="widget_ranking_refresh">更新</string>
</resources>